# PRADatabase

./: .gitignore  Main.hs  PRADatabase.cabal  SdntDB.sqlite3  Setup.sh  Start.sh
PRA/: App.hs  Logic.hs  Page.hs  Utils.hs
PRA/Page/: Add.hs  Auth.hs  Award.hs  CResult.hs  Club.hs  Home.hs  Search.hs  Student.hs  Theme.hs
Static/: clubs.csv
